IT to test rspec mapping of quickfix rules